# AccidentDetector

./: db.sqlite  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  sqlite.db  theme.json
attached_assets/: Pasted-AI-Accident-Detection-System-that-utilizes-a-pre-trained-YOLOv8-model-to-detect-accidents-in-real-ti-1743964597787.txt
backend/: app.py
backend/models/: yolo_sim.py
backend_node/src/: storage.ts
backend_python/: app.py
backend_python/models/: __init__.py  detector.py  yolo_sim.py
client/src/: App.tsx
client/src/components/: DetectionStats.tsx  IncidentModal.tsx  LocationMap.tsx  VideoFeed.tsx  VideoGrid.tsx  VideoUpload.tsx
client/src/contexts/: ThemeContext.tsx
client/src/hooks/: useDarkMode.tsx
client/src/lib/: dummyData.ts  types.ts
client/src/pages/: Analytics.tsx  Dashboard.tsx  MapView.tsx  Settings.tsx
config/: package-lock.json  package.json
drizzle/: 0000_conscious_pixie.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/src/: index.css
frontend/src/components/: AlertBanner.tsx  Header.tsx  RecentIncidents.tsx  Sidebar.tsx  SystemStatus.tsx
frontend/src/pages/: Analytics.tsx  IncidentLog.tsx  MapView.tsx
server/: db.ts  index.ts  routes.ts  storage.ts
shared/: schema.ts
