[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = []

packages = [{ include = "backend_python" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flask = "^3.1.0"
flask-cors = "^5.0.1"
numpy = "^2.2.4"
opencv-python-headless = "^4.11.0.86"
python-dotenv = "^1.1.0"
